fix: handle null model response text in trace payloads